# morpheus

./: .gitignore  COMPARISON.md  DATA.md  DECISIONS.md  Dockerfile.train  Morpheus_v2_Mamba.md  PLAN.md  POSTMORTEM.md  README.md  SETUP.md  TODO.md  compare_inference.py  docker-compose.train.yml  eval.py  morpheus-on-device-basque-autocompletion-full.md  morpheus-on-device-basque-autocompletion.md  pyproject.toml  run_phase6_v3.sh  train.py
config/: base.yaml  large.yaml  phase6_fim.yaml  phase6_fim_v3.yaml  small.yaml
demo/: Dockerfile  README.md  ar_raw_test.py  backends.py  continue_config.json  csr_eval.py  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  extract_real_prompts.py  fim_raw_test.py  fim_smoke.py  pyproject.toml  real_corpus_eval.py  real_prompts.json  server.py  test_filters.py  test_openai_compat.py
demo/eval/demo-results/20260719_084945_HiTZ.Latxa-Llama-3.1-8B.Q6_K_csr/: report.md  results.json
demo/eval/demo-results/20260719_085248_v3_fim.Q5_K_M_csr/: report.md  results.json
demo/obsidian-morpheus-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
demo/obsidian-morpheus-plugin/src/: ghost-text.ts  main.ts  telemetry.ts
demo/static/: editor.html  index-greedy.html  index.html  predictive-keyboard.html
demo/telemetry/: Dockerfile  README.md  db.py  server.py
demo/telemetry/static/: dashboard.html  events.html
demo/tests/: conftest.py  test_best_of_n.py  test_editor.py
docs/: ARCHITECTURE.md  On-Device Model Adaptation Feasibility.md  PHASE6_RUNBOOK.md  REVIEW_EOT_ANSWER.md  REVIEW_EOT_ISSUE.md  TRAJECTORY.md  android-keyboard-research.md  copilot-action-items.md  copilot-inline-completion-research.md  corpus-quality-fast-audit.md  corpus-quality-research.md  data-scaling-analysis.md  demo.md  eval-reform-findings.md  eval-reform-proposal.md  (+5 more)
(+193 files in other folders)
