[project]
name = "morpheus-mamba-demo"
version = "2.0.0"
description = "Morpheus v2 Mamba Demo — Basque autocomplete editor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "sentencepiece>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This is a script-only project — no Python package to ship
only-include = ["server.py", "static"]
packages = []
